--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,14 +49,46 @@
 
     <main class="main-section">
         <h1 class="titleh1">¡Bienvenido!</h1>
-        <section class="info-bienvenida">
-            <div class="avatar-gif">
-                <img src="../public/img/rabbit-gif.gif" alt="">
+        <section class="sections-main info-bienvenida">
+            <div class="info">
+                <div class="avatar-gif" id="avatar1">
+                    <img src="../public/img/rabbit-gif.gif" alt="">
+                </div>
+                <div class="mensaje-bienvenida nes-container is-rounded info-div" id="bienvenida1">
+                    <p>Descubre una nueva y divertida manera de aprender matemáticas.</p>
+                </div>
             </div>
-            <div class="mensaje-bienvenida">
-                <p>Descubre una nueva y divertida manera de aprender matemáticas.</p>
+            <div class="info">
+                <div class="mensaje-bienvenida nes-container is-rounded info-div" id="bienvenida2">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                </div>
+                <div class="avatar-gif" id="avatar2">
+                    <img src="../public/img/mouse-gif.gif" alt="">
+                </div>
             </div>
         </section>
+        <section class="sections-main info-objetivo">
+            <h2 class="sub-title">Nuestro objetivo</h2>
+            <div class="slider">
+
+            </div>
+            <div class="mensaje-bienvenida nes-container is-rounded info-div">
+                <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita minima aperiam labore nisi odit quidem laboriosam sed autem molestiae. Aliquid cupiditate laudantium atque ullam sequi minima sunt ipsum iusto illum?</p>
+            </div>
+        </section>
+        <section class="sections-main info-contacto">
+            <h2 class="sub-title">Contacto</h2>
+            <div class="contacto">
+
+            </div>
+            <div class="contacto">
+
+            </div>
+            <div class="contacto">
+
+            </div>
+        </section>
+
     </main>
 
     <div class="popUp nes-container is-rounded" id="div_login">
