Se hicieron cambios de de diseño en la página pricipal

--- a/public/css/general_styles.css
+++ b/public/css/general_styles.css
@@ -33,6 +33,7 @@ html {
 }
 
 header, footer {
+    z-index: 4;
     backdrop-filter: blur(8px) saturate(180%);
     -webkit-backdrop-filter: blur(8px) saturate(180%);
     background-color: rgba(245, 244, 245, 0.33);
@@ -47,7 +48,6 @@ body {
     margin: 0;
     height: 100%;
     margin-bottom: 40px;
-    background: var(--secundarioBlanco);
     font-family: var(--fuenteTextos);
     background-image: url('../img/pixel_bg2.jpg');
     background-attachment: fixed;
@@ -81,10 +81,11 @@ main.active, header.active, footer.active {
 
 .subtitle {
     font-family: var(--fuenteTitulos);
-}
-
-span {
-    font-size: 1.0em;
+    text-align: center;
+    font-size: 2rem;
+    color: var(--secundarioNaranja);
+    text-shadow: var(--sombraTextos);
+    margin: 1rem 0;
 }
 
 /*Estilos para el header*/
@@ -205,10 +206,6 @@ span {
 }
 
 /*Estilos para el main*/
-.sections-main {
-    width: 80%;
-}
-
 .info-bienvenida {
     display: contents;
 }
@@ -217,7 +214,7 @@ span {
     width: 80%;
     display: flex;
     flex-wrap: wrap;
-    margin: 3rem auto;
+    margin: 0 auto;
     justify-content: center;
     align-items: center;
 }
@@ -247,15 +244,44 @@ span {
 }
 
 .avatar-gif {
-    z-index: 1;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
 }
 
 .mensaje-bienvenida p {
     color: var(--principalNegro);
     font-size: 2rem;
     width: 90%;
-    text-align: center;
+    text-align: justify;
     margin: 0 auto;
+}
+
+.info-contacto {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.info-contacto a {
+    color: var(--principalNegro);
+}
+
+.info-contacto a:hover {
+    background-color: rgba(45, 189, 239, 0.5);
+    text-decoration: none;
+    color: var(--principalNegro);
+}
+
+.opciones-contacto {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.contacto {
+    width: 30%;
+    height: 10rem;
+    text-align: center;
 }
 
 @media (max-width: 1400px){
@@ -273,11 +299,136 @@ span {
     }
 }
 
+/* Estilos del Slider */
+.slider {
+    margin: 2rem auto;
+    width: fit-content;
+    height: fit-content;
+    z-index: 1;
+}
+.slides {
+    width: 627px;
+    height: 418px;
+    display: flex;
+}
+.slides input {
+    display: none;
+}
+.slide {
+    transition: 1s;
+}
+.slide img {
+    display: block;
+    width: fit-content;
+    height: fit-content;
+    transition: 1s;
+    filter: opacity(60%);
+}
+.navegacion-manual {
+    position: absolute;
+    width: 648px;
+    margin-top: -30px;
+    display: flex;
+    justify-content: center;
+}
+.manual-btn {
+    border: 2px solid var(--colorCarne);
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
+}
+.manual-btn:not(:last-child) {
+    margin-right: 40px;
+}
+.manual-btn:hover {
+    background-color: var(--colorCarne);
+} 
+#radio1:checked ~ .first {
+    margin-left: 0%;
+}
+#radio1:checked ~ div.slide img#img1 {
+    transition: 1s;
+    filter: none;
+}
+#radio2:checked ~ .first {
+    margin-left: -100%;
+}
+#radio2:checked ~ div.slide img#img2 {
+    transition: 1s;
+    filter: none;
+}
+#radio3:checked ~ .first {
+    margin-left: -200%;
+}
+#radio3:checked ~ div.slide img#img3 {
+    transition: 1s;
+    filter: none;
+}
+#radio4:checked ~ .first {
+    margin-left: -300%;
+}
+#radio4:checked ~ div.slide img#img4 {
+    transition: 1s;
+    filter: none;
+}
+#radio5:checked ~ .first {
+    margin-left: -400%;
+}
+#radio5:checked ~ div.slide img#img5 {
+    transition: 1s;
+    filter: none;
+}
+/* #radio6:checked ~ .first {
+    margin-left: -500%;
+}
+#radio6:checked ~ div.slide img#img6 {
+    transition: 1s;
+    filter: none;
+} */
+.navegacion-auto {
+    position: absolute;
+    display: flex;
+    width: 648px;
+    justify-content: center;
+    margin-top: 432px;
+}
+.navegacion-auto div {
+    display: none;
+    border: 2px solid var(--colorCarne);
+    padding: 5px;
+    border-radius: 10px;
+    transition: 1s;
+}
+.navegacion-auto div:not(:last-child) {
+    margin-right: auto;
+}
+#radio1:checked ~ .navegacion-auto .auto-btn {
+    background-color: var(--colorCarne);
+}
+#radio2:checked ~ .navegacion-auto .auto-btn {
+    background-color: var(--colorCarne);
+}
+#radio3:checked ~ .navegacion-auto .auto-btn {
+    background-color: var(--colorCarne);
+}
+#radio4:checked ~ .navegacion-auto .auto-btn {
+    background-color: var(--colorCarne);
+}
+#radio5:checked ~ .navegacion-auto .auto-btn {
+    background-color: var(--colorCarne);
+}
+/* #radio6:checked ~ .navegacion-auto .auto-btn {
+    background-color: var(--colorCarne);
+} */
+
+/* Fin de estilos del Slider */
+
 /*Estilos para los popUp*/
-.popUp {
+div.popUp {
     z-index: 4;
     transition: all 0.5s;
-    position: relative;
+    position: fixed;
     box-shadow: 0px 0px 28px -11px;
     background-color: var(--secundarioBlanco);
     width: 30rem;
@@ -286,7 +437,7 @@ span {
     overflow-y: scroll;
     top: 0;
     left: 50%;
-    transform: translate(-50%,-70%);
+    transform: translate(-50%,-100%);
     padding: 2em;
     border-radius: 0.5em;
     overflow-y: scroll;
@@ -297,27 +448,20 @@ span {
     border: 1px solid rgba(255, 255, 255, 0.125);
     visibility: hidden;
     opacity: 0;
-}
-
-.popUp.active {
-    transform: translate(-50%,0%);
-    visibility: visible;
-    opacity: 1;
-}
-
-#div_registro {
-    transform: translate(-50%,-150%);
-    -webkit-transform: translate(-50%,-150%);
-    -moz-transform: translate(-50%,-150%);
-    -ms-transform: translate(-50%,-150%);
-    -o-transform: translate(-50%,-150%);
-}
-#div_registro.active {
-    transform: translate(-50%,-100%);
     -webkit-transform: translate(-50%,-100%);
     -moz-transform: translate(-50%,-100%);
     -ms-transform: translate(-50%,-100%);
     -o-transform: translate(-50%,-100%);
+}
+
+div.popUp.active {
+    transform: translate(-50%,50%);
+    visibility: visible;
+    opacity: 1;
+    -webkit-transform: translate(-50%,50%);
+    -moz-transform: translate(-50%,50%);
+    -ms-transform: translate(-50%,50%);
+    -o-transform: translate(-50%,50%);
 }
 
 .popUp * {
@@ -326,7 +470,26 @@ span {
 }
 
 .popUp label {
+    margin: 2rem 0;
     width: 100%;
+}
+
+.popUp span {
+    font-size: 1rem;
+}
+
+#label-condiciones {
+    width: 100%;
+    margin: 2rem auto;
+}
+
+input#condiciones {
+    margin: 0 auto;
+}
+
+span.tiny-text {
+    text-align: center;
+    font-size: 0.8rem
 }
 
 .popUp input {
@@ -357,10 +520,10 @@ footer {
     justify-content: center;
     align-content: center;
     font-size: 1rem;
-    position: absolute;
+    position: sticky;
     bottom: 0;
     width: 100%;
-    height: 50px;
+    height: 4rem;
     bottom: 0;
     left: 0;
 }
@@ -371,8 +534,9 @@ footer p {
     font-weight: bolder;
 }
 
-@media (max-width:870px) {
-    footer {
-        position: sticky;
-    }
+footer div {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
